2015-11-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (info_variables): Rename
	hl-ref-rendition to active-link-style,
	ref-rendition to link-style,
	match-rendition to match-style.
	* NEWS: Update.
	* doc/info-stnd.texi (Colors and Styles): Update.

2015-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/ParagraphNonXS.pm (_add_next): Don't count 
	DEL bytes in width of word.
	* tp/t/results/plaintext_tests/
	quote_node_names/res_plaintext/quote_node_names.txt: Update.

2015-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/README: Mention run_all function.
	* tp/t/test_utils.pl (test, run_all, output_texi_file): Comments 
	added.

2015-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/plaintext.t (quote_node_names): New test.
	* tp/t/input_files/nodequote.texi: Input file.
	* tp/t/results/plaintext_tests/
	quote_node_names/res_plaintext/quote_node_names.txt: Reference 
	output file.
	* tp/Makefile.am (test_files): Add nodequote.texi.

2015-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention problem with "make dist" and XS modules.

2015-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi: Add examples of space between macro 
	name and opening brace.

2015-11-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\entry): For multi-line entries, use a \strut 
	on first and last lines.  Comments changed or removed.
	(\insertindexentrybox): Set \lineskip to 0pt.

2015-11-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\passargtomacro): Rewrite to operate purely 
	at TeX's expansion stage.
	(\defmacro): Use \passargtomacro for macros of more than one 
	argument.
	(\macroargctxt): Change catcode of space.
	(\scanmacro): Don't call \passargtomacro because macro arguments 
	have already been processed.
	(\pdfurl, \commondummiesnofonts): Remove definition of 
	\xprocessmacroarg.

2015-11-15  Gavin Smith  <gavinsmith0123@gmail.com>
